--- a/styles.less
+++ b/styles.less
@@ -31,6 +31,8 @@ h2 {
     margin: auto;
 }
 
+/* Header */
+
 .header {
     display: flex;
     justify-content: center;
@@ -95,6 +97,7 @@ h2 {
     border-bottom: 2px solid black;
 }
 
+/* Navigation / Pokemon Select */
 
 .pokemon-nav {
     background-color: @background-screen;
@@ -131,6 +134,8 @@ h2 {
         background-color: lightgrey;
     }
 }
+
+/* Main Section / Pokemon Info */
 
 .pokedex-main {
     background-color: @background-screen;
